data/issues_nolabel/nolabel_test_1074.txt
Build from source fails, Ubuntu Precise / GCC 4.9

Attempting to build on TravisCI, still can't get this to complete - any ideas?
Thanks!
https://travis-ci.org/peterbraden/node-tensorflow/builds/108822385
INFO: From Compiling external/jpeg_archive/jpeg-9a/jcmaster.c:
external/jpeg_archive/jpeg-9a/jcmaster.c: In function 'void prepare_for_pass(j_compress_ptr)':
external/jpeg_archive/jpeg-9a/jcmaster.c:726:28: error: cannot convert 'bool' to 'boolean' in assignment
   master->pub.is_last_pass = (master->pass_number == master->total_passes-1);
                            ^
ERROR: /home/travis/.cache/bazel/_bazel_travis/2cf95f6ff0f7dc500e0eb5aab5889c29/external/jpeg_archive/BUILD:77:1: C++ compilation of rule '@jpeg_archive//:jpeg' failed: gcc failed: error executing command 
  (cd /home/travis/.cache/bazel/_bazel_travis/2cf95f6ff0f7dc500e0eb5aab5889c29/tensorflow && \
  exec env - \
    PATH=/home/travis/.nvm/versions/node/v4.1.2/lib/node_modules/npm/bin/node-gyp-bin:/home/travis/build/peterbraden/node-tensorflow/node_modules/.bin:/home/travis/.nvm/versions/node/v4.1.2/bin:/home/travis/bin:/home/travis/.local/bin:/home/travis/.gimme/versions/go1.4.2.linux.amd64/bin:/home/travis/.rvm/gems/ruby-1.9.3-p551/bin:/home/travis/.rvm/gems/ruby-1.9.3-p551@global/bin:/home/travis/.rvm/rubies/ruby-1.9.3-p551/bin::/usr/local/phantomjs/bin:./node_modules/.bin:/usr/local/maven-3.2.5/bin:/usr/local/clang-3.4/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/travis/.rvm/bin \
  /usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -iquote external/jpeg_archive -iquote bazel-out/local_linux-opt/genfiles/external/jpeg_archive -iquote external/bazel_tools -iquote bazel-out/local_linux-opt/genfiles/external/bazel_tools -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/local_linux-opt/genfiles/external/jpeg_archive/jpeg-9a -isystem external/bazel_tools/tools/cpp/gcc3 -no-canonical-prefixes -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' '-frandom-seed=bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.o' -MD -MF bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.d -fPIC -c external/jpeg_archive/jpeg-9a/jcmaster.c -o bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1: gcc failed: error executing command 
  (cd /home/travis/.cache/bazel/_bazel_travis/2cf95f6ff0f7dc500e0eb5aab5889c29/tensorflow && \
  exec env - \
    PATH=/home/travis/.nvm/versions/node/v4.1.2/lib/node_modules/npm/bin/node-gyp-bin:/home/travis/build/peterbraden/node-tensorflow/node_modules/.bin:/home/travis/.nvm/versions/node/v4.1.2/bin:/home/travis/bin:/home/travis/.local/bin:/home/travis/.gimme/versions/go1.4.2.linux.amd64/bin:/home/travis/.rvm/gems/ruby-1.9.3-p551/bin:/home/travis/.rvm/gems/ruby-1.9.3-p551@global/bin:/home/travis/.rvm/rubies/ruby-1.9.3-p551/bin::/usr/local/phantomjs/bin:./node_modules/.bin:/usr/local/maven-3.2.5/bin:/usr/local/clang-3.4/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/travis/.rvm/bin \
  /usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -iquote external/jpeg_archive -iquote bazel-out/local_linux-opt/genfiles/external/jpeg_archive -iquote external/bazel_tools -iquote bazel-out/local_linux-opt/genfiles/external/bazel_tools -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/local_linux-opt/genfiles/external/jpeg_archive/jpeg-9a -isystem external/bazel_tools/tools/cpp/gcc3 -no-canonical-prefixes -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' '-frandom-seed=bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.o' -MD -MF bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.d -fPIC -c external/jpeg_archive/jpeg-9a/jcmaster.c -o bazel-out/local_linux-opt/bin/external/jpeg_archive/_objs/jpeg/external/jpeg_archive/jpeg-9a/jcmaster.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.